--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,10 +8,12 @@ environment:
   sdk: ">=2.10.0 <3.0.0"
 
 dependencies:
-  functions_framework: ^0.2.0
+  shelf_router: ^0.7.4
   shelf: ^0.7.9
+  functions_framework: ^0.2.0
 
 dev_dependencies:
+  shelf_router_generator: ^0.7.2+4
   build_runner: ^1.10.2
   build_verify: ^1.1.1
   functions_framework_builder: ^0.2.0
